src/objects/BFM_POD__c.object
<CustomObject>
    <fields>
        <fullName>Amazon_File_Link__c</fullName>
        <label>Amazon File Link</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Document__c</fullName>
        <formula>NF_e__r.Billing_Document__c</formula>
        <label>Billing Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>BFM_Carrier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>BFM_PODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Destination_Address__c</fullName>
        <formula>NF_e__r.Address_destination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_CNPJ__c</fullName>
        <formula>NF_e__r.CNPJ_destination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination CNPJ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Company_Name__c</fullName>
        <formula>NF_e__r.CNPJ_Destination_Account__r.Company_Name__c</formula>
        <label>Destination Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_UF__c</fullName>
        <formula>NF_e__r.Country_code_destination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination UF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_city__c</fullName>
        <formula>NF_e__r.Municipal_code_destination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination city</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_Access_Key__c</fullName>
        <externalId>true</externalId>
        <label>NF-e Access Key</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_Number__c</fullName>
        <formula>NF_e__r.NF_e_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NF-e Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_Series__c</fullName>
        <formula>NF_e__r.NF_e_serie__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NF-e Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NF-e</label>
        <referenceTo>BFM_NF_e__c</referenceTo>
        <relationshipName>PODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCR_Status__c</fullName>
        <label>OCR Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Task_ID__c</fullName>
        <label>OCR Task ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_File_Name__c</fullName>
        <label>Original File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Delivery__c</fullName>
        <formula>NF_e__r.Delivery__r.Delivery_Number__c</formula>
        <label>Outbound Delivery</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD_CNPJ_Check_Status__c</fullName>
        <label>POD CNPJ Check Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD_Date_Check_Status__c</fullName>
        <label>POD Date Check Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD_Date__c</fullName>
        <label>POD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POD_Definitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POD Definitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POD_Duplicate_Check_Status__c</fullName>
        <label>POD Duplicate Check Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD_ERRORS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POD ERRORS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POD_Link_Check_Status__c</fullName>
        <label>POD Link Check Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD_Number__c</fullName>
        <label>POD Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD_Status__c</fullName>
        <label>POD Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD_as_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POD as Receipt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physical_Reception_Date__c</fullName>
        <label>Physical Reception Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Physical_Reception_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physical_Reception_User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_ID__c</fullName>
        <label>Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upload_User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PODs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upload_date__c</fullName>
        <label>Upload date</label>
        <type>DateTime</type>
    </fields>
    <label>POD</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NF_e_Access_Key__c</columns>
        <columns>NF_e__c</columns>
        <columns>POD_Status__c</columns>
        <columns>POD_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>POD-{00000000}</displayFormat>
        <label>POD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PODs</pluralLabel>
    <recordTypes>
        <fullName>POD</fullName>
        <active>true</active>
        <label>POD</label>
    </recordTypes>
    <recordTypes>
        <fullName>POD_Receipt</fullName>
        <active>true</active>
        <label>POD Receipt</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BFM_POD_Definitive_with_Validation_Error</fullName>
        <active>true</active>
        <errorConditionFormula>POD_Definitive__c = true &amp;&amp;  POD_Link_Check_Status__c  != &apos;Link Ok&apos; &amp;&amp;  RecordType.Name =&apos;POD&apos;</errorConditionFormula>
        <errorMessage>POD cannot be Definitive without passing Validations</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BFM_POD_Invoice_Posted_Edit_Err</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp; (UPPER(PRIORVALUE( POD_Status__c )) = &apos;INVOICE POSTED&apos; || UPPER( NF_e__r.CT_e__r.Cte_Status__c ) = &apos;INVOICE POSTED&apos; || UPPER( NF_e__r.NFS__r.NFS_Status__c  ) = &apos;INVOICE POSTED&apos;)
&amp;&amp; $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
        <errorMessage>Record is not editable if status is Invoice Posted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BFM_POD_and_NFe_Date_Check</fullName>
        <active>true</active>
        <description>NF-e date should be previous to POD date</description>
        <errorConditionFormula>IF(NF_e__r.NF_e_creation_date__c &gt; POD_Date__c,true,false )</errorConditionFormula>
        <errorDisplayField>POD_Date__c</errorDisplayField>
        <errorMessage>NF-e date should be previous to POD date</errorMessage>
    </validationRules>
</CustomObject>